Initial Java 21 and Spring Boot 3 migration changes